preparation for og tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="title" content="Oswap pool statistics">
+    <meta name="description" content="Oswap pool statistics">
+    <meta property="og:title" content="{og_text}">
+    <meta property="og:description" content="{og_text}">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://v2-stats.oswap.io/logoForStats.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{og_text}">
+    <meta name="twitter:description" content="{og_text}">
+    <meta name="twitter:image" content="https://v2-stats.oswap.io/logoForStats.png">
   </head>
   <body>
     <noscript>
