title for google

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>Oswap pool statistics</title>
+    <title>{og_text}</title>
     <meta name="title" content="Oswap pool statistics">
     <meta name="description" content="Oswap pool statistics">
     <meta property="og:title" content="{og_text}">
