--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>{og_text}</title>
-    <meta name="title" content="Oswap pool statistics">
-    <meta name="description" content="Oswap pool statistics">
+    <meta name="description" content="{og_text}">
     <meta property="og:title" content="{og_text}">
     <meta property="og:description" content="{og_text}">
     <meta property="og:type" content="website">
